@@ -19,7 +19,6 @@
 1001=国庆节
 1224=平安夜
 1225=圣诞节
-1123=生日
 
 #农历
 [LUNAR]
